Fix some spacing and tag closing

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -18,27 +18,27 @@
 -->
 <div class="gform_wrapper" id="gform_wrapper_bucld">
   <div class="">
-      <strong class="">Boston University Conference on Language Development (BUCLD) 47:</strong>
+    <strong class="">Boston University Conference on Language Development (BUCLD) 47:</strong>
   </div>
 <!-------------------REMOVE PREREG SUMMARY AFTER PRE-REGISTRATION------------------->
 
   <div>
-      <ul>
-          <li>
-              <span class="">The 4-day (full) conference pre-registration fee is $45 for general pre-registration, and $0 for student pre-registration</span>.
-          </li>
-      </ul>
-      <div class="">Pre-registration closes and regular registration opens on <strong>Thursday, October 27th, 11:59 PM EDT</strong>:</div>
+    <ul>
+      <li>
+        <span class="">The 4-day (full) conference pre-registration fee is $45 for general pre-registration, and $0 for student pre-registration</span>.
+      </li>
+    </ul>
+    <div class="">Pre-registration closes and regular registration opens on <strong>Thursday, October 27th, 11:59 PM EDT</strong>:</div>
   </div>
 <!-------------------END REMOVE PREREG SUMMARY AFTER PRE-REGISTRATION------------------->
 <!-------------------COMMENT OUT ONSITE SUMMARY DURING PRE-REGISTRATION------------------->
   <div>
-      <ul>
-          <li>
-              The 4-day
-              <span class="">(full) conference registration fee is $60 for general registration, and $0 for student registration.</span>
-          </li>
-      </ul>
+    <ul>
+      <li>
+        The 4-day
+        <span class="">(full) conference registration fee is $60 for general registration, and $0 for student registration.</span>
+      </li>
+    </ul>
   </div>
 <!-------------------END COMMENT OUT ONSITE SUMMARY DURING PRE-REGISTRATION------------------->
 
@@ -60,7 +60,8 @@
                     </span><span id="input_bucld_name_last_container" class="name_last">
                     <input name="lastname" type="text" id="input_bucld_name_last" value="" aria-invalid="false" aria-label="Last name" aria-required="true" required oninvalid="this.setCustomValidity('Enter Last Name Here')" oninput="this.setCustomValidity('')" />
                     <label for="input_bucld_name_last">Last</label>
-                    </span> </div>
+                    </span>
+                  </div>
                 </fieldset>
               </li>
               <li id="field_bucld_contact" class="gfield gfield_contains_required field_sublabel_below field_description_below ">
@@ -69,7 +70,8 @@
                   <div class="ginput_complex ginput_container ginput_container_contact" id="input_bucld_contact"> <span class="ginput_left">
                     <input name="email" type="text" class="medium" id="input_bucld_email" value="" aria-invalid="false" required oninvalid="this.setCustomValidity('Enter valid email')" oninput="this.setCustomValidity('')" />
                     <label for="input_bucld_email">Email</label>
-                    </span> </div>
+                    </span>
+                  </div>
                 </fieldset>
               </li>
             </ul>
@@ -246,7 +248,7 @@
         </div>
 <!-------------------END COMMENT OUT ONSITE ID DURING PRE-REGISTRATION------------------->
 
-      <div id="student_workshop_thurday" class="thursday-workshop reg-student-postdoc">
+        <div id="student_workshop_thurday" class="thursday-workshop reg-student-postdoc">
           <h4 class="gsection_title">RSVP for Student Workshop on Thursday</h4>
           <fieldset>
             <legend>Professionalization Workshop for Students and Postdocs (with light refreshments)</legend>
@@ -535,7 +537,7 @@
                 <option value="Zimbabwe">Zimbabwe</option>
               </select>
               <label for="input_bucld_address_country" id="input_bucld_address_country_label">Country</label>
-              </span></div>
+              </span>
           </div>
         </fieldset>
         <fieldset>
@@ -743,7 +745,7 @@
     </div>
   </form>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<pre style="display:none"><script>
+  <pre style="display:none"><script>
 $(document).ready(function()
 {
   "use strict";
