Add affiiation and social media

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -49,6 +49,20 @@
                   </div>
                 </fieldset>
               </li>
+              <li id="field_bucld_affiliation" class="gfield gfield_contains_required field_sublabel_below field_description_below ">
+                <fieldset>
+                  <legend class="gfield_label gfield_label_before_complex">Affiliation / Social media</legend>
+                  <div class="ginput_complex ginput_container ginput_container_contact" id="input_bucld_contact"> <span class="ginput_left">
+                    <input name="input_affiliation" type="text" class="medium" id="input_bucld_affiliation" value="" aria-invalid="false" />
+                    <label for="input_bucld_affiliation">Affiliation</label>
+                    </span>
+                    <span class="ginput_right">
+                    <input name="input_twitter" type="text" class="medium" id="input_bucld_twitter" value="" aria-invalid="false" />
+                    <label for="input_bucld_twitter">Social media (Twitter, Instagram, etc.)</label>
+                    </span>
+                  </div>
+                </fieldset>
+              </li>
               <li id="field_bucld_contact" class="gfield gfield_contains_required field_sublabel_below field_description_below ">
                 <fieldset>
                   <legend class="gfield_label gfield_label_before_complex">Contact information<span class="gfield_required">*</span></legend>
