Update some SLD-related things

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -279,28 +279,21 @@
       <h4 class="gsection_title">Registration for SLD Symposium<span class="gfield_required">*</span></h4>
       <fieldset>
         <legend>Society for Language Development (SLD) Symposium, Thursday 1-6 PM</legend>
-        <span class="gfield_description">See <a href="#sld-information">information at the bottom of the page about SLD and membership</a>.</span>
+        <span class="gfield_description">
+          More information on the SLD Symposium can be found at the
+          <a href="http://web.sas.upenn.edu/societyforlanguagedevelopment/" target="_blank" rel="noopener noreferrer">SLD website</a>.
+        </span>
         <div class="ginput_container ginput_container_radio">
           <ul class="gfield_radio" id="input_bucld_sld">
             <li class="gchoice_bucld_sld_member reg-general-postdoc">
               <label for="choice_bucld_sld_member" id="label_bucld_sld_member">
-                <input name="input_sld" type="radio" id="choice_bucld_sld_member" value="General SLD Member - $20.00" onclick="calculateTotal();" required />
-                General (SLD Member) - $20</label>
-            </li>
-            <li class="gchoice_bucld_sld_nonmember reg-general-postdoc">
-              <label for="choice_bucld_sld_nonmember" id="label_bucld_sld_nonmember">
-                <input name="input_sld" type="radio" id="choice_bucld_sld_nonmember" value="General (not SLD member) - $50.00" onclick="calculateTotal();" required />
-                General (Not SLD Member) - $50</label>
+                <input name="input_sld" type="radio" id="choice_bucld_sld_member" value="General - $25.00" onclick="calculateTotal();" required />
+                General - $25</label>
             </li>
             <li class="gchoice_bucld_sld_student_member reg-student">
               <label for="choice_bucld_sld_student_member" id="label_bucld_sld_student_member">
-                <input name="input_sld" type="radio" id="choice_bucld_sld_student_member" value="Student SLD Member - $10.00" onclick="calculateTotal();" required />
-                Student (SLD Member) - $10</label>
-            </li>
-            <li class="gchoice_bucld_sld_student_nonmember reg-student">
-              <label for="choice_bucld_sld_student_nonmember" id="label_bucld_sld_student_nonmember">
-                <input name="input_sld" type="radio" id="choice_bucld_sld_student_nonmember" value="Student (not SLD member) - $25.00" onclick="calculateTotal();" required />
-                Student (Not SLD Member) - $25</label>
+                <input name="input_sld" type="radio" id="choice_bucld_sld_student_member" value="Student - $10.00" onclick="calculateTotal();" required />
+                Student - $10</label>
             </li>
             <li class="gchoice_bucld_sld_not_attending">
               <label for="choice_bucld_sld_not_attending" id="label_bucld_sld_not_attending">
@@ -738,27 +731,6 @@
       <h4 class="gsection_title">Proceedings</h4>
       <p>Conference proceedings will be published by Cascadilla Press in print and online with open access. Ordering your own printed copy of the proceedings is separate from registration. After registering, you will receive a code for 50% off the price of the printed edition.</p>
       <h4 class="gsection_title">SLD membership</h4>
-      <a name="sld-information"></a>
-      <p>
-        The Society for Language Development (SLD) will hold its Annual Symposium on Thursday, November 3rd, from 1 PM to 6 PM, in conjunction with BUCLD.
-        More information on the SLD Symposium can be found at the <a href="http://web.sas.upenn.edu/societyforlanguagedevelopment/" target="_blank" rel="noopener noreferrer">SLD website</a>.
-        SLD membership comes with subscription to the Society's journal, <em>Language Learning and Development</em>.
-        If you become a member of SLD now, you can register for the SLD Symposium at the SLD Member rate.
-        To become a <strong>SLD Member</strong> with journal subscription, visit the
-        <a href="http://www.tandfonline.com/toc/hlld20/current" target="_blank" rel="noopener noreferrer">journal publisher's website</a>,
-        follow the link "<a href="https://www.tandfonline.com/pricing/journal/hlld20" target="_blank" rel="noopener noreferrer">Subscribe</a>",
-        and buy a "Print &amp; Online Personal" subscription.
-        To become a <strong>Student SLD Member</strong> with journal subscription at a discounted rate,
-        please contact the journal publisher's customer service at 1-800-354-1420 (ext. 4) or
-        <a href="mailto:customerservice@taylorandfrancis.com">email the publisher</a>
-        and request the journal subscription at the Student SLD Member rate.
-        After membership/subscription purchase, you can register for the SLD Symposium at the member rates.
-        If you are paying for your membership and subscription by check,
-        make sure your check is dated and delivered before the date of the Symposium
-        so that SLD can confirm that your membership preceded the Symposium.
-        More information about SLD can be found at
-        <a href="http://web.sas.upenn.edu/societyforlanguagedevelopment/" target="_blank" rel="noopener noreferrer">http://web.sas.upenn.edu/societyforlanguagedevelopment/</a>.
-      </p>
     </div>
   </form>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
