--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -51,14 +51,18 @@
               </li>
               <li id="field_bucld_affiliation" class="gfield gfield_contains_required field_sublabel_below field_description_below ">
                 <fieldset>
-                  <legend class="gfield_label gfield_label_before_complex">Affiliation / Social media</legend>
+                  <legend class="gfield_label gfield_label_before_complex">Affiliation / Social media / Pronouns (for name badge) </legend>
                   <div class="ginput_complex ginput_container ginput_container_contact" id="input_bucld_contact"> <span class="ginput_left">
                     <input name="input_affiliation" type="text" class="medium" id="input_bucld_affiliation" value="" aria-invalid="false" />
                     <label for="input_bucld_affiliation">Affiliation</label>
                     </span>
                     <span class="ginput_right">
+ <input name="input_pronouns" type="text" class="medium" id="input_bucld_pronouns" value="" aria-invalid="false" />
+                    <label for="input_bucld_pronouns">Pronouns (optional)</label>
+                    </span>
+                    <span class="ginput_right">
                     <input name="input_twitter" type="text" class="medium" id="input_bucld_twitter" value="" aria-invalid="false" />
-                    <label for="input_bucld_twitter">Social media (Twitter, Instagram, etc.)</label>
+                    <label for="input_bucld_twitter">Twitter handle (optional)</label>
                     </span>
                   </div>
                 </fieldset>
