Remove social media input, switch to prereg

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -21,7 +21,6 @@
     <strong class="">Boston University Conference on Language Development (BUCLD) 47:</strong>
   </div>
 <!-------------------COMMENT OUT PREREG DEADLINE AFTER PRE-REGISTRATION------------------->
-<!--
   <div>
     <div class="">Pre-registration closes and regular registration opens on <strong>Thursday, October 20th, 11:59 PM EDT</strong>:</div>
   </div>
@@ -51,18 +50,14 @@
               </li>
               <li id="field_bucld_affiliation" class="gfield gfield_contains_required field_sublabel_below field_description_below ">
                 <fieldset>
-                  <legend class="gfield_label gfield_label_before_complex">Affiliation / Social media / Pronouns (for name badge) </legend>
+                  <legend class="gfield_label gfield_label_before_complex">Affiliation / Pronouns (for name badge) </legend>
                   <div class="ginput_complex ginput_container ginput_container_contact" id="input_bucld_contact"> <span class="ginput_left">
                     <input name="input_affiliation" type="text" class="medium" id="input_bucld_affiliation" value="" aria-invalid="false" />
                     <label for="input_bucld_affiliation">Affiliation</label>
                     </span>
                     <span class="ginput_right">
- <input name="input_pronouns" type="text" class="medium" id="input_bucld_pronouns" value="" aria-invalid="false" />
-                    <label for="input_bucld_pronouns">Pronouns (optional)</label>
-                    </span>
-                    <span class="ginput_right">
                     <input name="input_twitter" type="text" class="medium" id="input_bucld_twitter" value="" aria-invalid="false" />
-                    <label for="input_bucld_twitter">Twitter handle (optional)</label>
+                    <label for="input_bucld_twitter">Pronouns (optional)</label>
                     </span>
                   </div>
                 </fieldset>
@@ -84,7 +79,6 @@
       <div class="gf_clear gf_clear_complex"></div>
       <div id="bucld_registration">
 <!-------------------REMOVE PREREGISTER ID AFTER PRE-REGISTRATION------------------->
-<!--
         <div id="preregister">
           <h4 class="gsection_title">BUCLD Preregistration: Full (Four-Day) Conference</h4>
           <fieldset>
@@ -118,7 +112,7 @@
         </div>
 <!-------------------END REMOVE PREREGISTER ID AFTER PRE-REGISTRATION------------------->
 <!-------------------COMMENT OUT ONSITE ID DURING PRE-REGISTRATION------------------->
-
+<!--
         <div id="onsite">
           <h4 class="gsection_title">Registration for BUCLD<span class="gfield_required">*</span></h4>
           <fieldset>
