Switch to production

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -26,7 +26,7 @@
   </div>
 <!-------------------END REMOVE PREREG SUMMARY AFTER PRE-REGISTRATION------------------->
 
-  <form method="post" enctype="multipart/form-data" id="gform_bucld" action="https://www-test.bu.edu/phpbin/marconi/index.php">
+  <form method="post" enctype="multipart/form-data" id="gform_bucld" action="https://www.bu.edu/phpbin/marconi/index.php">
     <input name="form_id" type="hidden" value="bucld">
     <div class="gform_heading"></div>
     <div class="gform_body">
