Update gender choices

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -635,11 +635,11 @@
             <ul class="gfield_checkbox" id="input_bucld_gender">
               <li class="gchoice_bucld_gender_female">
                 <input name="input_gender[]" type="checkbox" value="Female" id="choice_bucld_gender_female" class="require-one watch-gender" />
-                <label for="choice_bucld_gender_female" id="label_bucld_gender_female">Female</label>
+                <label for="choice_bucld_gender_female" id="label_bucld_gender_female">Woman</label>
               </li>
               <li class="gchoice_bucld_gender_male">
                 <input name="input_gender[]" type="checkbox" value="Male" id="choice_bucld_gender_male" class="require-one watch-gender" />
-                <label for="choice_bucld_gender_male" id="label_bucld_gender_male">Male</label>
+                <label for="choice_bucld_gender_male" id="label_bucld_gender_male">Man</label>
               </li>
               <li class="gchoice_bucld_gender_nonbinary">
                 <input name="input_gender[]" type="checkbox" value="Non-binary" id="choice_bucld_gender_nonbinary" class="require-one watch-gender" />
